# ChainableIterator

./: Pipfile  README.md  mypy.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  install_check.yml
src/chainableiterator/: __init__.py  chainableiterator.py
tests/: test_ChainableIterator.py
