[metadata]
name = chainableiterator
version = 1.1.1
description = Chainable iterator library
license_files = ["LICENSE"]
author = Enchan1207
url = https://github.com/Enchan1207/ChainableIterator

[options]
package_dir =
  = src
packages = find_namespace:
dependency_links = 
  'git+https://github.com/Enchan1207/python-termdecorator#egg=termdecorator'
install_requires =
  termdecorator>=0.1.0
zip_safe = False

[options.packages.find]
where = src
