[metadata]
name = chainableiterator
version = 1.1.1
description = Chainable iterator library
license_files = ["LICENSE"]
author = Enchan1207
url = https://github.com/Enchan1207/ChainableIterator

[options]
package_dir =
  = src
packages = find_namespace:
zip_safe = False

[options.packages.find]
where = src
